--- a/css/style.css
+++ b/css/style.css
@@ -31,25 +31,25 @@ body {
 .logo {
   display: block;
   text-align: center;
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
   margin: 40px auto;
 }
 
 .card {
   background: var(--White);
-  border-radius: 20px;
-  padding: 25px;
+  border-radius: 1.25rem;
+  padding: 1.56rem;
 }
 
 .field {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 label {
   display: flex;
   justify-content: space-between;
-  font-size: 14px;
-  margin-bottom: 6px;
+  font-size: 0.9rem;
+  margin-bottom: 0.4rem;
   color: var(--Grey500);
 }
 
@@ -57,7 +57,7 @@ label {
   display: flex;
   align-items: center;
   background: var(--Grey50);
-  padding: 10px;
+  padding: 0.6rem;
   border-radius: 8px;
 }
 
@@ -66,7 +66,7 @@ label {
   border: none;
   background: transparent;
   text-align: right;
-  font-size: 18px;
+  font-size: 1.1rem;
   outline: none;
 }
 
@@ -77,15 +77,15 @@ label {
 .tips {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  gap: 0.6rem;
 }
 
 .tip-btn,
 #customTip {
   width: 100%;
-  height: 48px;
-  border-radius: 6px;
-  font-size: 16px;
+  height: 3rem;
+  border-radius: 0.4rem;
+  font-size: 1rem;
   box-sizing: border-box;
 }
 
@@ -117,15 +117,15 @@ label {
 .result {
   background: var(--Green900);
   color: var(--White);
-  border-radius: 15px;
-  padding: 20px;
-  margin-top: 20px;
+  border-radius: 0.95rem;
+  padding: 1.25rem;
+  margin-top: 1.25rem;
 }
 
 .result-row {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .result h2 {
@@ -134,11 +134,11 @@ label {
 
 #reset {
   width: 100%;
-  padding: 12px;
+  padding: 0.75rem;
   border: none;
   background: var(--Green400);
   color: var(--Green900);
-  border-radius: 6px;
+  border-radius: 0.4rem;
   cursor: pointer;
   font-weight: 700;
   transition: 0.2s;
@@ -150,7 +150,7 @@ label {
 
 .error {
   color: red;
-  font-size: 12px;
+  font-size: 0.75rem;
   float: right;
 }
 
@@ -160,7 +160,7 @@ label {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 1rem;
   text-align: center;
 }
 
@@ -170,13 +170,13 @@ label {
 
 @media (min-width: 768px) {
   .wrapper {
-    max-width: 700px;
-    margin: 20px auto 0 auto;
-    padding: 20px;
+    max-width: 800px;
+    margin: 1.25rem auto 0 auto;
+    padding: 1.25rem;
   }
   .card {
     display: flex;
-    gap: 30px;
+    gap: 1.9rem;
   }
   .form,
   .result {
